--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/Contact Me/index.html">Contact Us</a>
+        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/index2.html">Contact Us</a>
       </li>
     </ul>
 
