--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="file:///Users/Kamile/Documents/Bootstrap/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pixabay.com/photos/search/gallaxy/" target="_blank">Pixabay</a>
@@ -39,7 +39,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/Contact Me/index.html">Contact Us</a>
+        <a class="nav-link" href="Contact Me.html">Contact Us</a>
       </li>
     </ul>
 
@@ -66,7 +66,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card" style="width: 18rem;">
-  <img src="file:///Users/Kamile/Documents/Bootstrap/img/Milky Way Galaxy.jpg" class="card-img-top" alt="...">
+  <img src="Milky Way Galaxy.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Milky Way Galaxy</h5>
     <p class="card-text">The Galactic Center as seen from Earth's night sky (the laser creates a guide-star for the telescope).</p>
