--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
       <img src="file:///Users/Kamile/Documents/Bootstrap/img/orion-nebula-11107.jpg" alt="Los Angeles" width="1100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
-        <p>We had such a great time in Milky Way!</p>
+        <p>Orion Nebula!</p>
       </div>   
     </div>
     <div class="carousel-item">
       <img src="file:///Users/Kamile/Documents/Bootstrap/img/milky-way-2695569_1280.jpg" alt="Chicago" width="1100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
-        <p>Thank you, Milky Way!</p>
+        <p> Milky Way!</p>
       </div>   
     </div>
     <div class="carousel-item">
       <img src="file:///Users/Kamile/Documents/Bootstrap/img/milky-way-2695569_1280.jpg" alt="New York" width="1100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
-        <p>We love the Big Apple!</p>
+        <p>Milky Way!</p>
       </div>   
     </div>
   </div>
