--- a/Contact Me.html
+++ b/Contact Me.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-	 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		  <a class="navbar-brand" href="https://github.com/DJAndrew-coder">Git Hub</a>
+	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+		<a class="navbar-brand" href="https://github.com/DJAndrew-coder" target="_blank">Git Hub</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
   		</button>
@@ -21,17 +21,17 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="https://pixabay.com/photos/search/gallaxy/" target="_blank">Pixabay</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
  
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
@@ -39,7 +39,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="Contact Me.html">Contact Us</a>
+        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/Contact Me/index.html">Contact Us</a>
       </li>
 
     </ul>
@@ -60,40 +60,42 @@
 			</div>
 		</div>
 		<div class="col-md-9">
-			<div class="contact-form">
-				<div class="form-group">
-				  <label class="control-label col-sm-2" for="fname">First Name:</label>
-				  <div class="col-sm-10">          
-					<input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
-				  </div>
+			 <form action="index.html" class="was-validated" method="post">
+				<div class="contact-form">
+					<div class="form-group">
+					  <label class="control-label col-sm-2" for="fname">First Name:</label>
+					  <div class="col-sm-10">          
+						<input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname" required>
+					  </div>
+					</div>
 				</div>
-				<div class="form-group">
-				  <label class="control-label col-sm-2" for="lname">Last Name:</label>
-				  <div class="col-sm-10">          
-					<input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
-				  </div>
-				</div>
-				<div class="form-group">
-				  <label class="control-label col-sm-2" for="email">Email:</label>
-				  <div class="col-sm-10">
-					<input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-				  </div>
-				</div>
-				<div class="form-group">
-				  <label class="control-label col-sm-2" for="comment">Comment:</label>
-				  <div class="col-sm-10">
-					<textarea class="form-control" rows="5" id="comment"></textarea>
-				  </div>
-				</div>
-				<div class="form-group">        
-				  <div class="col-sm-offset-2 col-sm-10">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
-				  </div>
-				</div>
+					<div class="form-group">
+					  <label class="control-label col-sm-2" for="lname">Last Name:</label>
+					  <div class="col-sm-10">          
+						<input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname" required>
+					  </div>
+					</div>
+					<div class="form-group">
+					  <label class="control-label col-sm-2" for="email">Email:</label>
+					  <div class="col-sm-10">
+						<input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+					  </div>
+					</div>
+					<div class="form-group">
+					  <label class="control-label col-sm-2" for="comment">Comment:</label>
+					  <div class="col-sm-10">
+						<textarea class="form-control" rows="5" id="comment"></textarea>
+					  </div>
+					</div>
+					<div class="form-group">        
+					  <div class="col-sm-offset-2 col-sm-10">
+							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+					 </div>
+					</div>
+				</form>				
 			</div>
 		</div>
 	</div>
-</div>
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
