--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pixabay.com/photos/search/gallaxy/" target="_blank">Pixabay</a>
@@ -38,7 +38,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/Contact Me/index.html">Contact Us</a>
+        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/Contact Me/Contact Me.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
