--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="file:///Users/Kamile/Documents/Bootstrap/img/orion-nebula-11107.jpg" alt="Los Angeles" width="1100" height="400">
+      <img src="orion-nebula-11107.jpg" alt="Los Angeles" width="1100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
         <p>Orion Nebula!</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="file:///Users/Kamile/Documents/Bootstrap/img/milky-way-2695569_1280.jpg" alt="Chicago" width="1100" height="400">
+      <img src="milky-way-2695569_1280.jpg" alt="Chicago" width="1100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
         <p> Milky Way!</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="file:///Users/Kamile/Documents/Bootstrap/img/milky-way-2695569_1280.jpg" alt="New York" width="1100" height="400">
+      <img src="milky-way-2695569_1280.jpg" alt="New York" width="1100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
         <p>Milky Way!</p>
@@ -100,7 +100,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card" style="width: 18rem;">
-          <img src="file:///Users/Kamile/Documents/Bootstrap/img/Milky Way Galaxy.jpg" class="card-img-top" alt="...">
+          <img src="Milky Way Galaxy.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Milky Way Galaxy</h5>
             <p class="card-text">The Galactic Center as seen from Earth's night sky (the laser creates a guide-star for the telescope).</p>
