--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </button>
       </div>
       <div class="modal-body">
-         <form action=""  class="was-validated" method="post">
+         <form action="index.html"  class="was-validated" method="post">
           <div class="form-group">
             <label for="uname">Username:</label>
             <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
