--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/Contact Me/Contact Me.html">Contact Us</a>
+        <a class="nav-link" href="Contact Me.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
