--- a/Contact Me.html
+++ b/Contact Me.html
@@ -21,7 +21,7 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pixabay.com/photos/search/gallaxy/" target="_blank">Pixabay</a>
@@ -39,7 +39,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="file:///Users/Kamile/Documents/Bootstrap/Contact Me/Contact Me.html">Contact Us</a>
+        <a class="nav-link" href="Contact Me.html">Contact Us</a>
       </li>
 
     </ul>
