--- a/Contact Me.html
+++ b/Contact Me.html
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 		<div class="col-md-9">
-			 <form action="index.html" class="was-validated" method="post">
+			 <form class="was-validated">
 				<div class="contact-form">
 					<div class="form-group">
 					  <label class="control-label col-sm-2" for="fname">First Name:</label>
