--- a/Contact Me.html
+++ b/Contact Me.html
@@ -8,20 +8,18 @@
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="Contact Me.css">
+    <link rel="stylesheet" type="text/css" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/Contact Me/style.css">
 </head>
-
 <body>
-	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		<a class="navbar-brand" href="https://github.com/DJAndrew-coder" target="_blank">Git Hub</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-  		</button>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+	 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <a class="navbar-brand" href="https://github.com/DJAndrew-coder" target="_blank">Git Hub</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pixabay.com/photos/search/gallaxy/" target="_blank">Pixabay</a>
@@ -29,7 +27,6 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
- 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
@@ -39,28 +36,28 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="Contact Me.html">Contact Us</a>
+        <a class="nav-link" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/Contact Me/index.html">Contact Us</a>
       </li>
-
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
-</nav>
+</nav> 
 
-	<div class="container">
-	<div class="row">
-		<div class="col-md-3">
-			<div class="contact-info">
-				<img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
-				<h2>Contact Us</h2>
-				<h4>We would love to hear from you!</h4>
+<div class="container">
+	<div class="jumbotron">
+		<div class="row">
+			<div class="col-md-3">
+				<div class="contact-info">
+					<img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
+					<h2>Contact Us</h2>
+					<h4>We would love to hear from you!</h4>
+				</div>
 			</div>
-		</div>
-		<div class="col-md-9">
-			 <form class="was-validated">
+			<div class="col-md-9">
+			 <form action="index.html" class="was-validated" method="post">
 				<div class="contact-form">
 					<div class="form-group">
 					  <label class="control-label col-sm-2" for="fname">First Name:</label>
@@ -69,33 +66,39 @@
 					  </div>
 					</div>
 				</div>
-					<div class="form-group">
-					  <label class="control-label col-sm-2" for="lname">Last Name:</label>
-					  <div class="col-sm-10">          
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="lname">Last Name:</label>
+					<div class="col-sm-10">          
 						<input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname" required>
-					  </div>
 					</div>
-					<div class="form-group">
-					  <label class="control-label col-sm-2" for="email">Email:</label>
-					  <div class="col-sm-10">
+				</div>
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="email">Email:</label>
+					<div class="col-sm-10">
 						<input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
-					  </div>
 					</div>
-					<div class="form-group">
-					  <label class="control-label col-sm-2" for="comment">Comment:</label>
-					  <div class="col-sm-10">
+				</div>
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="comment">Comment:</label>
+					<div class="col-sm-10">
 						<textarea class="form-control" rows="5" id="comment"></textarea>
-					  </div>
 					</div>
-					<div class="form-group">        
-					  <div class="col-sm-offset-2 col-sm-10">
-							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
-					 </div>
+				</div>
+				<div class="form-group">        
+					<div class="col-sm-offset-2 col-sm-10">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
 					</div>
+				</div>
 				</form>				
 			</div>
 		</div>
 	</div>
+</div>
+<footer class="container">
+	<div class="jumbotron">
+  <p>&copy; A. J. Company 2020</p>
+</div>
+</footer>
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
