--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <main role="main">
@@ -22,7 +21,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pixabay.com/photos/search/gallaxy/" target="_blank">Pixabay</a>
@@ -39,7 +38,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/Contact Me/index.html">Contact Us</a>
+        <a class="nav-link" href="Contact Me.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -63,21 +62,21 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/purple-690724_1280.jpg" alt="Los Angeles" width="2100" height="400">
+      <img src="purple-690724_1280.jpg" alt="" width="2100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
         <p>We had such a great time in Milky Way!</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/milky-way-2695569_1280.jpg" alt="Chicago" width="2100" height="400">
+      <img src="milky-way-2695569_1280.jpg" alt="" width="2100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
         <p>Thank you, Milky Way!</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/astronomy-1867616_640.jpg" alt="New York" width="2100" height="400">
+      <img src="astronomy-1867616_640.jpg" alt="" width="2100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
         <p>We love the Big Apple!</p>
@@ -104,7 +103,7 @@
     <div class="row row-cols-1 row-cols-md-3">
       <div class="col mb-4">
         <div class="card">
-          <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/orion-nebula-11107.jpg" class="card-img-top" alt="...">
+          <img src="orion-nebula-11107.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -114,7 +113,7 @@
   </div>
   <div class="col mb-4">
     <div class="card">
-      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/galaxy-11098_640.jpg" class="card-img-top" alt="...">
+      <img src="galaxy-11098_640.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -124,7 +123,7 @@
   </div>
   <div class="col mb-4">
     <div class="card">
-      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/astronomy-1867616_640.jpg" class="card-img-top" alt="...">
+      <img src="astronomy-1867616_640.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -134,7 +133,7 @@
   </div>
   <div class="col mb-4">
     <div class="card">
-      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/purple-690724_1280.jpg" class="card-img-top" alt="...">
+      <img src="purple-690724_1280.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -144,7 +143,7 @@
   </div>
     <div class="col mb-4">
     <div class="card">
-      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/purple-690724_1280.jpg" class="card-img-top" alt="...">
+      <img src="purple-690724_1280.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -154,7 +153,7 @@
   </div>
     <div class="col mb-4">
     <div class="card">
-      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/purple-690724_1280.jpg" class="card-img-top" alt="...">
+      <img src="purple-690724_1280.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
