--- a/Contact Me.html
+++ b/Contact Me.html
@@ -8,7 +8,7 @@
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/Contact Me/style.css">
+    <link rel="stylesheet" type="text/css" href="Contact Me.css">
 </head>
 <body>
 	 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -19,7 +19,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pixabay.com/photos/search/gallaxy/" target="_blank">Pixabay</a>
@@ -36,7 +36,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/Contact Me/index.html">Contact Us</a>
+        <a class="nav-link" href="Contavt Me.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
