--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </button>
       </div>
       <div class="modal-body">
-         <form action=""  class="was-validated">
+         <form class="was-validated">
           <div class="form-group">
             <label for="uname">Username:</label>
             <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
