--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="card">
           <img src="orion-nebula-11107.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Orion Nebula</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
@@ -115,7 +115,7 @@
     <div class="card">
       <img src="galaxy-11098_640.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Galaxy</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
@@ -125,7 +125,7 @@
     <div class="card">
       <img src="astronomy-1867616_640.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Astronomy</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
@@ -135,7 +135,7 @@
     <div class="card">
       <img src="purple-690724_1280.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Purple</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
@@ -155,7 +155,7 @@
     <div class="card">
       <img src="purple-690724_1280.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Purple</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
