--- a/Contact Me.html
+++ b/Contact Me.html
@@ -36,7 +36,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="Contavt Me.html">Contact Us</a>
+        <a class="nav-link" href="Contact Me.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
